--- a/package.json
+++ b/package.json
@@ -26,10 +26,15 @@
     "ws": "^7.3.1"
   },
   "dependencies": {
+    "bootstrap": "^4.5.1",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
+    "react-bootstrap": "^1.3.0",
+    "react-summernote": "^2.0.2",
     "socket.io-client": "^2.3.0",
     "uuid": "^8.2.0"
   }
